- do not warn about kernel options when parsing drakx options

Version 17.13 - 9 January 2016

- regressions from 17.11:
  o fix ignoring options from isolinux
  o fix parsing stage1's automatic option (mga#17441)
- silent a perl-5.22 warning

Version 17.12 - 2 January 2016

- bootloader:
  o log found kernels (mga#16128)
  o skip swap in the list of partitions (mga#15767)
- partitioning:
  o auto fill LV name from mntpnt (mga#5407)
  o suggest "lv_foo" instead of just "foo" for LVname
- summary:
  o drop support for ISApnp sound cards
- fix a message (mga#51414)
- misc cleanups

Version 17.11 - 1 January 2016

- make report.bug.xz more reproducible
- misc cleanups
- drakx-in-chroot:
  o use GetOpt::Long for options
    (thus allowing eg "--flang fr" instead of just "--flang=fr")

Version 17.10 - 24 December 2015

- use mutter instead of matchbox (fix black screen)

Version 17.9 - 24 December 2015

- include 60-evdev.rules instead of no more existing 60-keyboard.rules
- silent gtk+ warnings about swrast driver

Version 17.8 - 22 December 2015

- recognize new kernel-4.3 drivers

Version 17.7.1 - 17 December 2015

- include one more file for new X.org wrapper (mga#17348)

Version 17.7 - 17 December 2015

- adapt to new X.org wrapper (mga#17348)

Version 17.6 - 12 December 2015

- drakx-in-chroot:
  o fix running with xserver-1.18

Version 17.5 - 8 december 2015

- more substitution for task-plasma5
- use sddm instead of kdm

Version 17.4 - 6 December 2015

- use task-plasma5-minimal instead of task-kde4-minimal

Version 17.3 - 4 December 2015

- recognize new kernel-4.3 drivers

Version 17.1 - 27 August 2015

- recognize new kernel-4.1 drivers

Version 17.0 - 24 June 2015

- adapt to pango 1.37.x
- adapt to perl-5.22
- switch from evdev+synaptics to libinput driver

Version 16.105 - 15 June 2015

- really fix urpmi media when installing from USB (mga#5690)

Version 16.104 - 13 June 2015

- diskdrake:
  o prevent errors when telling kernel to reread partition table
