@@ -1,4 +1,5 @@
 - do not warn about kernel options when parsing drakx options
+- include libinput udev helpers
 
 Version 17.13 - 9 January 2016
 
